# fastapi_auth_service

./: .dockerignore  .env.example  Dockerfile  Makefile  README copy.md  README.md  STRUCTURE.md  docker-compose.dev.yml  docker-compose.yml  poetry.toml  pyproject.toml  run_dev_server.py  verify_setup.py
.github/: dependabot.yml
.github/workflows/: fauth_service_cd.yml  fauth_service_ci.yml  fauth_service_security_scan.yml
app/: __init__.py  config.py  main.py
app/core/auth/: auth0_client.py  jwt_handler.py  permissions.py
app/db/: database.py
app/db/repositories/: user_repository.py
app/models/: user.py
app/schemas/: user.py
app/services/: auth_service.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md  docker-quickstart.md  docker-setup.md
docs/diagrams/: architecture.mmd  sequence-diagram.mmd  user_flow.mmd
scripts/: verify-docker.sh
tests/: conftest.py  test_main.py
tests/fixtures/: auth_fixtures.py  user_fixtures.py
tests/unit/test_auth/: test_auth0_client.py  test_jwt_handler.py  test_permissions.py
tests/unit/test_services/: test_auth_service.py
tools/: .pre-commit-config.yaml  pre-commit-config.yaml  run-pre-commit.sh
